--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   "dependencies": {
     "axios": "^1.7.9",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
