--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@babel/core": "^7.26.7",
     "@babel/preset-react": "^7.26.3",
+    "@eslint/js": "^9.19.0",
     "@parcel/babel-plugin-transform-runtime": "^2.13.3",
     "@parcel/babel-preset-env": "^2.13.3",
     "@testing-library/dom": "^10.4.0",
@@ -53,15 +54,9 @@
     "@types/react-dom": "^19.0.3",
     "babel-jest": "^29.7.0",
     "babel-plugin-react-compiler": "^19.0.0-beta-decd7b8-20250118",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jest": "^28.11.0",
-    "eslint-plugin-n": "^17.15.1",
-    "eslint-plugin-promise": "^7.2.1",
+    "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.34.4",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-decd7b8-20250118",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -70,7 +65,8 @@
     "parcel": "^2.13.3",
     "prettier": "^3.4.2",
     "process": "^0.11.10",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.23.0"
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint .",
