--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "pretty-check": "prettier --check .",
     "prepare": "husky",
     "ts:check": "tsc",
-    "verify": "npm run lint && npm run pretty-check && npm run ts:check && npm run test"
+    "verify": "npm run lint && npm run pretty-check && npm run ts:check"
   },
   "repository": {
     "type": "git",
