Fixed bug, reorganized logic to separate files. Added TS path aliases

--- a/babel.config.json
+++ b/babel.config.json
@@ -8,8 +8,5 @@
       }
     ]
   ],
-  "plugins": [
-    "babel-plugin-react-compiler",
-    "@parcel/babel-plugin-transform-runtime"
-  ]
+  "plugins": ["babel-plugin-react-compiler", "@parcel/babel-plugin-transform-runtime"]
 }
