Setup Vitest + 100% coverage

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 {
   "include": ["src"],
   "compilerOptions": {
+    "types": ["vitest/globals"],
     "baseUrl": "./src",
     "paths": {
       "components/*": ["components/*"],
