--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "start": "parcel --open -p 3000",
     "clean": "rm -rf dist && rm -rf .parcel-cache",
     "build": "parcel build --public-url ./",
-    "test": "jest",
+    "test": "vitest --coverage",
     "lint": "eslint .",
     "pretty": "prettier --write .",
     "pretty-check": "prettier --check .",
     "prepare": "husky",
     "ts:check": "tsc",
-    "verify": "npm run lint && npm run pretty-check && npm run ts:check"
+    "verify": "npm run lint && npm run pretty-check && npm run ts:check && npx vitest --coverage run"
   },
   "repository": {
     "type": "git",
@@ -36,7 +36,6 @@
   },
   "homepage": "https://github.com/Raymond-Cox/poe2-tools#readme",
   "dependencies": {
-    "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0"
@@ -49,24 +48,25 @@
     "@parcel/babel-preset-env": "^2.13.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
-    "@types/jest": "^29.5.14",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^22.13.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "babel-jest": "^29.7.0",
+    "@vitest/coverage-v8": "^3.0.5",
     "babel-plugin-react-compiler": "^19.0.0-beta-decd7b8-20250118",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.34.4",
     "eslint-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
+    "happy-dom": "^17.1.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-transform-stub": "^2.0.0",
     "lint-staged": "^15.4.2",
     "parcel": "^2.13.3",
     "prettier": "^3.4.2",
     "process": "^0.11.10",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.23.0"
+    "typescript-eslint": "^8.23.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.5"
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint .",
